--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello this is GitHub Sample Project</h1> 
+    <h1 class="heading">Hello this is GitHub Sample Project</h1> 
 <h2>Changed...</h2>
 </body>
 </html>
